--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,4 @@
 <h1>Articles listing page</h1>
-
 <table>
   <thead>
     <tr>
@@ -8,13 +7,13 @@
       <th>Actions</th>
     </tr>
   </thead>
-
   <tbody>
     <% @articles.each do |article| %>
       <tr>
         <td><%= article.title %></td>
         <td><%= article.description %></td>
-        <td>Placeholder</td>
+        <td><%= link_to 'Show', article_path(article) %></td>
+        <td><%= link_to 'Delete', article_path(article), method: :delete %></td>
       </tr>
     <% end %>
   </tbody>
