--- a/app/views/articles/_form.erb
+++ b/app/views/articles/_form.erb
@@ -1,12 +1,5 @@
 <div class="container">
-  <% if @article.errors.any? %>
-    <h2>The following errors prevented the article from being saved</h2>
-    <ul>
-      <% @article.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-    </ul>
-  <% end %>
+  <%= render 'shared/errors' %>
   <div class="row justify-content-center">
     <div class="col-10">
       <%= form_with(model: @article, class: "shadow p-3 mb-3 bg-info rounded", local: true) do |f| %>
