--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,1 +1,8 @@
-
+<h1 class="text-center mt-4">Categories</h1>
+<div class="flickr_pagination">
+  <%= will_paginate @categories, :container => false %>
+</div>
+<%= render 'category' %>
+<div class="flickr_pagination mb-4">
+  <%= will_paginate @categories, :container => false %>
+</div>
